Section on biology - big and small, mythology

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -14,6 +14,24 @@
  urldate = {2019-10-08}
 }
 
+@online{vertebrateExtraLimbs,
+ title = {Vertebrate with Extra Limbs},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/VertebrateWithExtraLimbs},
+ urldate = {2020-05-07}
+}
+
+@online{centaurs,
+ title = {Our Centaurs Are Different aka: Centauroid Form},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/CentauroidForm},
+ urldate = {2020-05-07}
+}
+
+@online{pegasus,
+ title = {Pegasus},
+ url = {https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus},
+ urldate = {2020-05-07}
+}
+
 @article{ArcLengthParametrization,
  author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
  year = {2002},
@@ -243,6 +261,16 @@
  volume = {76},
  journal = {Okajimas folia anatomica Japonica},
  url = {https://www.jstage.jst.go.jp/article/ofaj1936/76/1/76_17/_pdf﻿}
+}
+
+@article{smallestVertebrate,
+ author = {Rittmeyer, Eric N. and Allison, Allen and Gründler, Michael C. and Thompson, Derrick K. and Austin, Christopher C.},
+ title = {Ecological Guild Evolution and the Discovery of the World's Smallest Vertebrate},
+ year = {2012},
+ month = {01},
+ journal = {PLoS ONE},
+ volume = {7},
+ url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0029797}
 }
 
 @online{WikipediaVogelskelett,
