--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -17,6 +17,7 @@ Idee und Ziel
  \item Einschränkung auf Skelett, da sonst zu umfangreich für eine Masterarbeit
  \item Wirbeliere, da Skelette sehr ähnliche
  \item möglicherweise interaktive Bedienung
+ \item auch fiktive Tiere
 \end{itemize}
 
 
